--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -1,3 +1,33 @@
-﻿a, a:visited, a:link, a:focus{
+﻿@import url(https://fonts.googleapis.com/css?family=Cuprum:700,400&subset=latin,cyrillic);
+
+@import (reference) "../bower_components/bootstrap/less/variables.less";
+@import (reference) "colors.less";
+
+a, a:active, a:visited, a:link{
     outline:none;
+}
+
+ul{
+    margin-bottom:0;
+}
+
+body {
+    background-image: url('/content/dist/i/bg.jpg');
+    background-color: @color-background;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+
+    @media (max-width: @screen-xs-max) {
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
