--- a/LR.WebUI/Views/Shared/_Layout.cshtml
+++ b/LR.WebUI/Views/Shared/_Layout.cshtml
@@ -1,41 +1,19 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.PageTitle</title>
+    <meta name="description" content="@ViewBag.PageDescription" />
+    <meta name="keywords" content="@ViewBag.PageKeywords" />
 
-    <title>@(ViewBag.Title ?? "leavingrussia.ru")</title>
-
-    @*styles*@
-    <link href="~/dist/css/site.min.css" rel="stylesheet">
-    @RenderSection("styles", false)
-
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="~/content/dist/css/site.min.css" />
 </head>
 <body>
-    @*nav*@
-    <nav class="navbar navbar-default">
-        @Html.Partial("_Navbar")
-    </nav>
-
-    @*page*@
-    <div id="page">
-        <div class="container">
-            @RenderBody()
-        </div>
+    <div class="container">
+        @Html.Partial("_TopMenu")
+        @RenderBody()
     </div>
-
-    @*footer*@
-    <footer class="footer">
-        @Html.Partial("_Footer")
-    </footer>
-
-    @*scripts*@
-    <script src="~/dist/js/site.min.js"></script>
-    @RenderSection("scripts", false)
+    <script src="~/content/dist/js/site.min.js"></script>
 </body>
 </html>
