--- a/LR.WebUI/Views/Shared/_TopMenu.cshtml
+++ b/LR.WebUI/Views/Shared/_TopMenu.cshtml
@@ -4,8 +4,8 @@
             <div class="menu-left">
                 <ul class="list-unstyled list-inline">
                     <li><a href="#">Вход/Аккаунт</a></li>
-                    <li><a href="#">Europe</a></li>
-                    <li><a href="#">Pages</a></li>
+                    <li><a href="#">Акции!</a></li>
+                    <li><a href="#">Страницы</a></li>
                 </ul>
             </div>
         </div>
