--- a/LR.WebUI/Views/Shared/_Layout.cshtml
+++ b/LR.WebUI/Views/Shared/_Layout.cshtml
@@ -12,6 +12,15 @@
 <body>
     <div class="container">
         @Html.Partial("_TopMenu")
+        <div class="row">
+            <div class="col-sm-6">
+                <img style="max-width:100%;" alt="leavingrussia.ru" src="~/content/dist/i/logo.png" />
+            </div>
+            <div class="col-sm-6">
+                партнеры
+            </div>
+        </div>
+        
         @RenderBody()
     </div>
     <script src="~/content/dist/js/site.min.js"></script>
