--- a/LR.WebUI/Views/Shared/_Header.cshtml
+++ b/LR.WebUI/Views/Shared/_Header.cshtml
@@ -20,6 +20,9 @@
                         <li>
                             <a href="#">Регистрация</a>
                         </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Home", new {area= "Admin" })">Управление</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-6">
