--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -6,6 +6,7 @@
 
 a:not(.btn), a:link:not(.btn), a:active:not(.btn), a:visited:not(.btn), a:focus:not(.btn), button:not(.btn), button:link:not(.btn), button:visited:not(.btn), button:active:not(.btn), button:focus:not(.btn), input:focus:not(.btn) {
     color: inherit;
+    outline:none;
 }
 
 ul {
@@ -329,7 +330,6 @@ aside {
     font-size: 20px;
     margin-top: -28px;
     transition: all .5s;
-    outline: none;
     display: none;
 }
 
@@ -659,7 +659,6 @@ aside {
     display: inline-block;
     text-align: center;
     padding-top: 8px;
-    outline: none;
     transition: all .5s;
 }
 
@@ -731,6 +730,11 @@ aside {
     right: 5px;
     bottom: 5px;
     left: 5px;
+    transition:all .5s;
+}
+
+.last-pictures__img:hover{
+    opacity:.7;
 }
 
 //last-materials
@@ -766,7 +770,6 @@ aside {
     left:0;
     width:100%;
     height:100%;
-    outline:none;
 }
 
 .last-materials__item-img:hover{
@@ -787,7 +790,6 @@ aside {
     transition:all .5s;
     font-family: 'PT Sans Narrow', sans-serif;
     font-weight:700;
-    outline:none;
 }
 
 .last-materials__item-title a:hover{
