--- a/LR.WebUI/Views/Pictures/_Last.cshtml
+++ b/LR.WebUI/Views/Pictures/_Last.cshtml
@@ -4,35 +4,37 @@
 {*@
     <aside class="last-pictures">
         <h4 class="green-header"><span class="green-header__arrow">Последние фото</span></h4>
-        <ul>
-            <li>
-                <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-            </li>
-            <li>
-                <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-            </li>
-            <li>
-                <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-            </li>
-            <li>
-                <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-            </li>
-            <li>
-                <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-            </li>
-            <li>
-                <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-            </li>
-            <li>
-                <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-            </li>
-            <li>
-                <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-            </li>
-            <li>
-                <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-            </li>
-        </ul>
+        <div class="last-pictures__box">
+            <ul>
+                <li>
+                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
+                </li>
+                <li>
+                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
+                </li>
+                <li>
+                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
+                </li>
+                <li>
+                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
+                </li>
+                <li>
+                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
+                </li>
+                <li>
+                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
+                </li>
+                <li>
+                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
+                </li>
+                <li>
+                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
+                </li>
+                <li>
+                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
+                </li>
+            </ul>
+        </div>
         <br />
         <br />
     </aside>
