--- a/LR.WebUI/Views/Home/Index.cshtml
+++ b/LR.WebUI/Views/Home/Index.cshtml
@@ -3,143 +3,55 @@
     ViewBag.Title = "Гавная";
 }
 
-<div class="gallery">
-    <ul class="gallery__wrapper">
-        <li class="gallery__item gallery__item-1">
-            <div class="gallery__img" style="background-image:url('/content/static/temp/airplane-crash-780x516.jpg')">
-                <a href="#" class="gallery__link"></a>
-            </div>
-            <div class="gallery__item-info">
-                <div class="gallery__item-title"><a href="#">Take photos with my camera</a></div>
-                <div class="gallery__item-meta">
-                    <span class="author">simlex</span>
-                    <span class="date">Сентябрь 4, 2015</span>
-                </div>
-            </div>
-        </li>
-        <li class="gallery__item gallery__item-2">
-            <div class="gallery__img" style="background-image:url('/content/static/temp/forest-585x390.jpg')">
-                <a href="#" class="gallery__link"></a>
-            </div>
-            <div class="gallery__item-info">
-                <div class="gallery__item-title"><a href="#">Last trip to Europe</a></div>
-                <div class="gallery__item-meta">
-                    <span class="author">simlex</span>
-                    <span class="date">Сентябрь 4, 2015</span>
-                </div>
-            </div>
-        </li>
-        <li class="gallery__item gallery__item-3">
-            <div class="gallery__img" style="background-image:url('/content/static/temp/iceland-585x390.jpg')">
-                <a href="#" class="gallery__link"></a>
-            </div>
-            <div class="gallery__item-info">
-                <div class="gallery__item-title"><a href="#">Beautiful Landscape in the West</a></div>
-                <div class="gallery__item-meta">
-                    <span class="author">simlex</span>
-                    <span class="date">Сентябрь 4, 2015</span>
-                </div>
-            </div>
-        </li>
-    </ul>
-    <ul class="gallery__nav">
-        <li><a href="#" class="gallery__nav-btn prev"><i class="fa fa-angle-left"></i></a></li>
-        <li><a href="#" class="gallery__nav-btn next"><i class="fa fa-angle-right"></i></a></li>
-    </ul>
-</div>
+@section gallery{
+    @Html.Action("Gallery", "Articles", new { boxesCount = 3 })
+}
 
-<div class="block">
-    <div class="block__left">
-        <div class="home-materials">
-            <div class="home-material first">
-                <div class="home-material__img">
-                    <img alt="" src="/content/static/temp/first-post.jpg" />
-                </div>
-                <div class="home-material__content">
-                    <div class="home-material__category">Europe</div>
-                    <div class="home-material__title"><h2><a href="#">Beautiful Forest in Europe</a></h2></div>
-                    <div class="home-material__author"><i>Автор: simlex</i></div>
-                    <div class="home-material__html">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing. Aenean commodo ligula eget dolor. Aenean masssociis nat penatibus et magnis dis parturient monteios, nascetur ridiculus mus. Nulla onsequat mas quis enim. Pede justo, fringilla vel, aliquet nec loremt, vulputate eget. Nemo enim ipsam voluptatem quia voluptas sit pernatur aut odit aut fugit, sed quia consequuntur magni dolores.</p>
-                        <p>
-                            Rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer cidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Lorem ipsum. vitae dicta sunt.
-                        </p>
-                    </div>
-                    <div class="home-material__read-btn">
-                        <a class="btn" href="#">Подробнее</a>
-                    </div>
-                    <div class="home-material__meta">
-                        <div class="home-material__meta-left text-muted">
-                            <ul class="list-unstyled list-inline">
-                                <li class="calendar">
-                                    <i class="fa fa-calendar-o"></i> September 4, 2015
-                                </li>
-                                <li>
-                                    <i class="fa fa-comments-o"></i> 3 comments
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="home-material__meta-right">
-                            share buttons
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="home-material">
-                <div class="home-material__img" style="background-image:url('/content/static/temp/iceland2-585x390.jpg');"></div>
-                <div class="home-material__content">
-                    <div class="home-material__category">Europe</div>
-                    <div class="home-material__title"><h2><a href="#">Beautiful Forest in Europe</a></h2></div>
-                    <div class="home-material__author"><i>Автор: simlex</i></div>
-                    <div class="home-material__html">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing. Aenean commodo ligula eget dolor. Aenean masssociis nat penatibus et magnis dis parturient monteios, nascetur ridiculus mus. Nulla onsequat mas quis enim. Pede justo, fringilla vel, aliquet nec loremt, vulputate eget. Nemo enim ipsam voluptatem quia voluptas sit pernatur aut odit aut fugit, sed quia consequuntur magni dolores.</p>
-                    </div>
-                </div>
-                <hr />
-            </div>
-            <div class="home-material">
-                <div class="home-material__img" style="background-image:url('/content/static/temp/first-post.jpg');"></div>
-                <div class="home-material__content">
-                    <div class="home-material__category">Europe</div>
-                    <div class="home-material__title"><h2><a href="#">Beautiful Forest in Europe</a></h2></div>
-                    <div class="home-material__author"><i>Автор: simlex</i></div>
-                    <div class="home-material__html">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing. Aenean commodo ligula eget dolor. Aenean masssociis nat penatibus et magnis dis parturient monteios, nascetur ridiculus mus. Nulla onsequat mas quis enim. Pede justo, fringilla vel, aliquet nec loremt, vulputate eget. Nemo enim ipsam voluptatem quia voluptas sit pernatur aut odit aut fugit, sed quia consequuntur magni dolores.</p>
-                    </div>
-                </div>
-                <hr />
-            </div>
-            <div class="home-material">
-                <div class="home-material__img" style="background-image:url('/content/static/temp/iceland2-585x390.jpg');"></div>
-                <div class="home-material__content">
-                    <div class="home-material__category">Europe</div>
-                    <div class="home-material__title"><h2><a href="#">Beautiful Forest in Europe</a></h2></div>
-                    <div class="home-material__author"><i>Автор: simlex</i></div>
-                    <div class="home-material__html">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing. Aenean commodo ligula eget dolor. Aenean masssociis nat penatibus et magnis dis parturient monteios, nascetur ridiculus mus. Nulla onsequat mas quis enim. Pede justo, fringilla vel, aliquet nec loremt, vulputate eget. Nemo enim ipsam voluptatem quia voluptas sit pernatur aut odit aut fugit, sed quia consequuntur magni dolores.</p>
-                    </div>
-                </div>
-                <hr />
-            </div>
-            <div class="home-material">
-                <div class="home-material__img" style="background-image:url('/content/static/temp/first-post.jpg');"></div>
-                <div class="home-material__content">
-                    <div class="home-material__category">Europe</div>
-                    <div class="home-material__title"><h2><a href="#">Beautiful Forest in Europe</a></h2></div>
-                    <div class="home-material__author"><i>Автор: simlex</i></div>
-                    <div class="home-material__html">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing. Aenean commodo ligula eget dolor. Aenean masssociis nat penatibus et magnis dis parturient monteios, nascetur ridiculus mus. Nulla onsequat mas quis enim. Pede justo, fringilla vel, aliquet nec loremt, vulputate eget. Nemo enim ipsam voluptatem quia voluptas sit pernatur aut odit aut fugit, sed quia consequuntur magni dolores.</p>
-                    </div>
-                </div>
-                <hr />
-            </div>
-        </div>
-    </div>
-    <div class="block__right">
-        @Html.Partial("_AboutUs")
-        @Html.Partial("_JoinUs")
-        @Html.Action("Last", "Pictures", new { amount = 10 })
-        @Html.Action("Last", "Articles", new { amount = 5 })
-        @Html.Action("Categories", "Articles")
-    </div>
-</div>
+@Html.Action("ForHome", "Articles", new { amount = 11 })
+
+@section scripts{
+    <script>
+        $(function () {
+            var animationTime = 300;
+
+            $('.gallery__nav-btn').on('click', function () {
+                var direction = $(this).hasClass('next');
+                $active = $('.gallery__wrapper.active');
+                $next = direction ? $active.next('.gallery__wrapper') : $active.prev('.gallery__wrapper');
+                if ($next.length == 0) {
+                    $next = direction ? $next = $('.gallery__wrapper[data-index="1"]') : $('.gallery__wrapper[data-index="3"]');
+                };
+
+                var index = $next.attr('data-index');
+
+                $active.animate({
+                    'opacity': 0,
+                    'left': direction ? '-100%' : '100%',
+                    'top': direction ? '-100%' : '100%'
+                }, animationTime, function () {
+                    $active.css({ 'left': 0, 'top': 0 });
+                });
+
+                $next.animate({
+                    'opacity': 1
+                }, animationTime, function () {
+                    $active.toggleClass('active');
+                    $next.toggleClass('active');
+                });
+
+                return false;
+            });
+
+            var interval = setInterval(function () {
+                $('.gallery__nav-btn.next').trigger('click');
+            }, 4000);
+
+            $('.gallery').mouseenter(function () { clearInterval(interval) });
+            $('.gallery').mouseleave(function () {
+                interval = setInterval(function () {
+                    $('.gallery__nav-btn.next').trigger('click');
+                }, 4000);
+            });
+        });
+    </script>
+}
